<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:id="@+id/text"
        android:background="#FFFFFF"
        android:text="@string/secure_delete"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/del"
       android:background="#F44336"
       android:textColor="#FFFFFF"
       android:id="@+id/delete_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="#2979FF"
        android:textColor="#FFFFFF"
        android:id="@+id/cancel_button"/>


</LinearLayout>

</LinearLayout>