<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/addColor">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLayoutSite">

        <EditText
            android:id="@+id/sitex"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:hint="@string/site_ins" />
        <requestFocus />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLayoutUsername">

        <EditText
            android:id="@+id/usernamex"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:hint="@string/username_ins" />
    <requestFocus />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLayoutPassword">

    <EditText
        android:id="@+id/passwordx"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_ins"/>

        <requestFocus />

</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLayoutEmail">
        <EditText
            android:id="@+id/emailx"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_mail_ins" />
        <requestFocus />

    </android.support.design.widget.TextInputLayout>




    <Button
        android:paddingTop="30dp"
        android:id="@+id/add_button"
        android:padding="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/oval1"
        android:text="@string/add"
        android:textColor="#FFFFFF" />
</LinearLayout>

    <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->