<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chose"
        android:textColor="#FFFFFF"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="20dp"
        android:background="@drawable/new_margin"/>

    <include layout="@layout/ovals"></include>
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:textSize="15dp"
            android:textColor="#FFFFFF"
            android:text="@string/save"/>
        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Reset"
            android:textColor="#FFFFFF"
            android:textSize="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"/>

    </LinearLayout>

</LinearLayout>