<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="5dp"
    android:layout_marginTop="20dp"
    android:layout_margin="20dp"
    android:elevation="8dp"
    android:background="@drawable/rippleview">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/site"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/id"
            android:maxLines="1"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/username_item"/>
        <TextView
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/site"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/id"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="3dp"
            android:visibility="visible" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/e_mail_item"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/id"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="3dp"
            android:visibility="visible" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/password_item"/>

        <TextView
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/id"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="3dp"
            android:visibility="invisible" />
    </LinearLayout>
</LinearLayout>